Do not return QVector with an empty AltTrans

Only return a QVector containing data when data actually exists for at
least one field of the AltTrans struct.

BUG: 494500
(cherry picked from commit 64903c06c65e8bbdd9a27ea50ba03c1c5183b731)